version/1.54/ripscrip/5.4-popup-lists.md
# 5.4 Pop-Up Lists

[◀ Prev: 5.3 Local File Playback](5.3-local-playback.md) · [Contents](README.md) · [Next: 5.5 Queries & Advanced Commands ▶](5.5-queries-and-advanced-commands.md)

This page covers Pop-Up Pick Lists — host-defined selection lists that pop up on the terminal and insert the chosen entry's text into the [host command](5.0-host-commands.md) being built. Lists can be used anywhere a [text variable](5.1-text-variables.md) can.

Any place that you can use a [Text Variable](5.1-text-variables.md) (Queries, Button and Mouse Field return strings, and Keystroke Macros), you can take advantage of a unique feature of RIPscrip - Pop-Up Pick Lists. A Pop-Up Pick List is simply a list that pops up allowing you to choose from one of several available values. Whichever entry in the list you choose will insert it's associated command in the Host Command returned back to your host.

A list is created by putting the special list instructions inside two sets of parenthesis like this: `((` and `))`. The list consists of an optional question followed by two colons (`::`), followed by one or more list entries. For example, `((Send Email to?::Sysop,Cosysop,Joe))` says to pop-up a list asking you "Send Email to?", giving you the choices of "Sysop", "Cosysop", and "Joe".

By default, if you press ESC instead of picking an entry in the list, then nothing will be inserted into the text of your Command. You can indicate that the user must pick an entry by putting an asterisk (`*`) at the beginning of the question. For example, `((*Send Mail to?::Sysop,Joe))`. This would make it so that the user must choose either Sysop or Joe.

In the previous examples, Sysop and Joe are the text responses that are inserted into your Host Command. These commands are also the same things that are displayed in the listing. If you want to use something else in the listing instead of the return text, you can. When you make the list entry, add an `@description` to the end of it. For example:

```text
((Send Mail To?::Sysop@Head Honcho,Cosysop,Joe))
```

...would display a pop-up pick list of Head Honcho, Cosysop, and Joe.

One final feature of Pop-Up Pick Lists allows you to specify a hotkey for each entry in the list. For example, if you wanted the first character of each entry to be highlighted (thus allowing you to select that character to activate the entry), simply put a tilde (`~`) or an underline (`_`) before and after the keystroke. For example `_S_ysop` would highlight the "S" in "Sysop" appearing like this:

```text
Sysop
```

You can highlight more than one character, but only the first one will be the active hotkey. If you omit the second tilde or underline, then the remainder of the description will be highlighted.

> **NOTE:** If you use a tilde or an underline in the Text Response (not the description), then those characters are inserted into your Host Command when it is transmitted to the host. You probably don't want to do this. Recommendation: only use hotkey features on list entries where you specify a description!

If you do not specify a question, then the list default to the question:

```text
Choose one of the following:
```

You may specify up to twenty entries for any one list. In RIPterm version 1.52 and earlier, the total length of a pick list was 256 bytes. In version 1.53 and later, this limit has been increased to 1024 bytes. _(v1.53)_

Some characters have special significance in the RIPscrip language. These characters are `!` (exclamation mark, or for you Unix-heads, bang), `\` (backslash), and `|` (vertical bar). To use these characters in a Text Response, they must be preceded by a backslash (`!` becomes `\!`, `\` becomes `\\`, and `|` becomes `\|`). RIPaint automatically adds these when creating Text Responses. You need to be aware of this only if you are editing RIPscrip files with a text editor. The `_` (underline) and `~` (tilde) characters used to indicate the hotkey in a Text Response are not able to be preceded by a backslash to be used by themselves. They will be returned to the host if they exist in a Text Response (not in the description), however everything after the underline or tilde will be underlined, and the first character will be considered the hotkey.

Examples:

```text
((Send E-Mail to?::Sysop,Joe,Mike))
((*Send E-Mail to?::Sysop@The Head Honcho,Joe,Mike@My Brother))
((::Sysop@_T_he Head Honcho,Joe,Mike@My _B_rother))
```

---

[◀ Prev: 5.3 Local File Playback](5.3-local-playback.md) · [Contents](README.md) · [Next: 5.5 Queries & Advanced Commands ▶](5.5-queries-and-advanced-commands.md)
