version/2.30/ripscrip/5.4-popup-lists.md
# 5.4 Pop-Up Lists

[◀ Prev: 5.3 Local File Playback](5.3-local-playback.md) · [Contents](README.md) · [Next: 5.5 File Transfer & Queries ▶](5.5-file-transfer-and-queries.md)

This page covers Pop-Up Pick Lists — host-defined selection lists that pop up on the terminal and insert the chosen entry's text into the [host command](5.0-host-commands.md) being built. Lists can be used anywhere a [text variable](5.1-text-variables.md) can. The 1.54 record is [5.4 in the v1.54 reference](../../1.54/ripscrip/5.4-popup-lists.md); 2.x raises the entry limit from 20 to 64 _(v2.A1)_.

## Pop-Up Lists

Any place that you can use a Text Variable (Queries, Button and Mouse Field return strings, and Keystroke Macros), you can take advantage of a unique feature of RIPscrip - Pop-Up Pick Lists. A Pop-Up Pick List is simply a list that pops up allowing you to choose from one of several available values. Whichever entry in the list you choose will insert it's associated command in the Host Command returned back to your host.

A list is created by putting the special list instructions inside two sets of parenthesis like this: `((` and `))`. The list consists of an optional question followed by two colons (`::`), followed by one or more list entries. For example, `((Send Email to?::Sysop,Cosysop,Joe))` says to pop-up a list asking you "Send Email to?", giving you the choices of "Sysop", "Cosysop", and "Joe".

By default, if you press ESC instead of picking an entry in the list, then nothing will be inserted into the text of your Command. You can indicate that the user must pick an entry by putting an asterisk (`*`) at the beginning of the question. For example, `((*Send Mail to?::Sysop,Joe))`. This would make it so that the user must choose either Sysop or Joe.

In the previous examples, Sysop and Joe are the text responses that are inserted into your Host Command. These commands are also the same things that are displayed in the listing. If you want to use something else in the listing instead of the return text, you can. When you make the list entry, add an `@description` to the end of it. For example:

```text
((Send Mail To?::Sysop@Head Honcho,Cosysop,Joe))
```

...would display a pop-up pick list of Head Honcho, Cosysop, and Joe.

One final feature of Pop-Up Pick Lists allows you to specify a hotkey for each entry in the list. For example, if you wanted the first character of each entry to be highlighted (thus allowing you to select that character to activate the entry), simply put a tilde (`~`) or an underline (`_`) before and after the keystroke. For example `_S_ysop` would highlight the "S" in "Sysop" appearing like this:

```text
Sysop
```

You can highlight more than one character, but only the first one will be the active hotkey. If you omit the second tilde or underline, then the remainder of the description will be highlighted.

**NOTE:** If you use a tilde or an underline in the Text Response (not the description), then those characters are inserted into your Host Command when it is transmitted to the host. You probably don't want to do this. Recommendation: only use hotkey features on list entries where you specify a description!

If you do not specify a question, then the list default to the question:

```text
Choose one of the following:
```

You may specify up to 64 entries for any one list. _(v2.A1)_

In RIPterm version 1.52 and earlier, the total length of a pick list was 256 bytes. In version 1.53 and later, this limit has been increased to 1024 bytes. _(v1.53)_

In earlier revisions of RIPscrip, a maximum number of 20 entries in a picklist were allowed. This has been expanded to 64 for version 2.0. If the total number of entries makes the picklist too tall to fit on the screen then it should handle some form of scrolling mechanism. _(v2.A1)_

Some characters have special significance in the RIPscrip language. These characters are `!` (exclamation mark, or for you Unix-heads, bang), `\` (backslash), and `|` (vertical bar). To use these characters in a Text Response, they must be preceded by a backslash (`!` becomes `\!`, `\` becomes `\\`, and `|` becomes `\|`). RIPaint automatically adds these when creating Text Responses. You need to be aware of this only if you are editing RIPscrip files with a text editor. The `_` (underline) and `~` (tilde) characters used to indicate the hotkey in a Text Response are not able to be preceded by a backslash to be used by themselves. They will be returned to the host if they exist in a Text Response (not in the description), however everything after the underline or tilde will be underlined, and the first character will be considered the hotkey.

Examples:

```text
((Send E-Mail to?::Sysop,Joe,Mike))
((*Send E-Mail to?::Sysop@The Head Honcho,Joe,Mike@My Brother))
((::Sysop@_T_he Head Honcho,Joe,Mike@My _B_rother))
```

## Worked example: definition and response flow

Consider a mouse field whose host command embeds a pick list:

```text
!|1M0000122912340100000E((*Read which area?::MAIL@_M_ail,NEWS@_N_ews,FILES@_F_iles))^m
```

The flow when the user clicks the field:

1. The terminal begins expanding the field's host command and encounters the `((…))` list definition.
2. A pop-up appears titled "Read which area?" listing **M**ail, **N**ews, **F**iles (hotkeys highlighted). The leading `*` means ESC is refused — the user must choose.
3. The user picks "News". The list expression is replaced by that entry's text response, `NEWS`.
4. Expansion continues: the trailing `^m` becomes a carriage return, and the terminal transmits `E NEWS` followed by CR to the host — which sees an ordinary command string and never knows a menu was involved.

Nothing about the list persists after expansion; clicking the field again pops the list again.

---

[◀ Prev: 5.3 Local File Playback](5.3-local-playback.md) · [Contents](README.md) · [Next: 5.5 File Transfer & Queries ▶](5.5-file-transfer-and-queries.md)
